# MMSFLC-Damage-Multiplier

./: .gitignore  .gitmodules  CMakeLists.txt  license.md  modinfo.ini  readme.md
scripts/: sanitize_enums.py
src/: Guid.cpp  Guid.hpp  Main.cpp  MessageFile.cpp  MessageFile.hpp  MessageManager.cpp  MessageManager.hpp  MessageReference.cpp  MessageReference.hpp  MessageUtility.cpp  MessageUtility.hpp
